<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="12dp"
    android:paddingBottom="8dp">

    <TextView
        style="@style/textStyle"
        android:id="@+id/matches_played_text"
        android:layout_width="@dimen/number_width"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/number_margin"
        android:gravity="center"
        android:text="@string/label_matches_played"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/goal_diff_text"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/textStyle"
        android:id="@+id/goal_diff_text"
        android:layout_width="@dimen/number_width"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/number_margin"
        android:gravity="center"
        android:text="@string/label_goal_difference"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/points_text"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/textStyle"
        android:id="@+id/points_text"
        android:layout_width="@dimen/number_width"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/edge_margins"
        android:gravity="center"
        android:text="@string/label_points"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>